// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImagesSection matches snapshot with images 1`] = `
<div
  class="space-y-6"
>
  <div>
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    >
      Room Images
    </label>
    <div
      class="mt-2"
    >
      <button
        class="whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-background hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full h-32 border-2 border-dashed border-gray-300 hover:border-gray-400 flex flex-col items-center justify-center gap-2"
        type="button"
      >
        <svg
          class="lucide lucide-upload text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <polyline
            points="17 8 12 3 7 8"
          />
          <line
            x1="12"
            x2="12"
            y1="3"
            y2="15"
          />
        </svg>
        <span
          class="text-gray-600"
        >
          Click to upload images
        </span>
        <span
          class="text-sm text-gray-400"
        >
          PNG, JPG, GIF up to 10MB each
        </span>
      </button>
      <input
        accept="image/*"
        class="h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
        multiple=""
        type="file"
      />
    </div>
  </div>
  <div>
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    >
      Image Previews (
      2
      )
    </label>
    <div
      class="mt-2 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"
    >
      <div
        class="relative group"
      >
        <div
          class="aspect-square rounded-lg overflow-hidden border border-gray-200"
        >
          <img
            alt="Room image 1"
            class="w-full h-full object-cover"
            src="https://example.com/image1.jpg"
          />
        </div>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground hover:bg-destructive/90 absolute -top-2 -right-2 h-6 w-6 rounded-full p-0 opacity-0 group-hover:opacity-100 transition-opacity"
          type="button"
        >
          <svg
            class="lucide lucide-x"
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
        <div
          class="absolute bottom-0 left-0 right-0 bg-black bg-opacity-50 text-white text-xs p-1 opacity-0 group-hover:opacity-100 transition-opacity"
        >
          Image 
          1
        </div>
      </div>
      <div
        class="relative group"
      >
        <div
          class="aspect-square rounded-lg overflow-hidden border border-gray-200"
        >
          <img
            alt="Room image 2"
            class="w-full h-full object-cover"
            src="https://example.com/image2.jpg"
          />
        </div>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground hover:bg-destructive/90 absolute -top-2 -right-2 h-6 w-6 rounded-full p-0 opacity-0 group-hover:opacity-100 transition-opacity"
          type="button"
        >
          <svg
            class="lucide lucide-x"
            fill="none"
            height="12"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
        <div
          class="absolute bottom-0 left-0 right-0 bg-black bg-opacity-50 text-white text-xs p-1 opacity-0 group-hover:opacity-100 transition-opacity"
        >
          Image 
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImagesSection matches snapshot without images 1`] = `
<div
  class="space-y-6"
>
  <div>
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
    >
      Room Images
    </label>
    <div
      class="mt-2"
    >
      <button
        class="whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-background hover:bg-accent hover:text-accent-foreground px-4 py-2 w-full h-32 border-2 border-dashed border-gray-300 hover:border-gray-400 flex flex-col items-center justify-center gap-2"
        type="button"
      >
        <svg
          class="lucide lucide-upload text-gray-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <polyline
            points="17 8 12 3 7 8"
          />
          <line
            x1="12"
            x2="12"
            y1="3"
            y2="15"
          />
        </svg>
        <span
          class="text-gray-600"
        >
          Click to upload images
        </span>
        <span
          class="text-sm text-gray-400"
        >
          PNG, JPG, GIF up to 10MB each
        </span>
      </button>
      <input
        accept="image/*"
        class="h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 hidden"
        multiple=""
        type="file"
      />
    </div>
  </div>
  <div
    class="text-center py-8 text-gray-500"
  >
    <svg
      class="lucide lucide-image mx-auto mb-2 text-gray-300"
      fill="none"
      height="48"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="48"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="3"
      />
      <circle
        cx="9"
        cy="9"
        r="2"
      />
      <path
        d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
      />
    </svg>
    <p>
      No images uploaded yet
    </p>
    <p
      class="text-sm"
    >
      Upload images to preview them here
    </p>
  </div>
</div>
`;
